<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Here you put the rest of your current view-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/numMedidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="INGRESE NUMERO MEDIDOR" />

    <Button
        android:id="@+id/query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Buscar Cliente Medidor" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Numero Medidor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="medidor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Nombre Usuario"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="usuario"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Apellido Usuario"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/result3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="apellido"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Rut Usuario"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/result4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10px"
        android:text="rut"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:onClick="Enviar"
        android:text="Registrar Lectura" />

    <Button
        android:id="@+id/btnvVerifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="consultar"
        android:text="Verificar Lectura" />

    <Button
        android:id="@+id/exportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Exportar"
        android:text="Exportar BBDD" />

    <Button
        android:id="@+id/btnImportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Importar"
        android:text="IMPORTAR BBDD" />


</LinearLayout>

</ScrollView>