<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="Volver"
    android:orientation="vertical"
    tools:context=".RegistrarLectura">


    <TextView
        android:id="@+id/resulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="80px"
        android:padding="10px"
        android:text="Numero de  Medidor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_lectura"
        android:layout_width="355dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80px"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Numero de Lectura"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="80px"
        android:padding="10px"
        android:text="Se registro"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80px"
        android:layout_marginEnd="8dp"
        android:onClick="Registrar"
        android:text="REGISTRAR"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lectura" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="127dp"
        android:layout_height="50dp"
        app:srcCompat="?attr/actionModeCloseDrawable" />

</LinearLayout>